# gobbledygook88.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  Gemfile  Gruntfile.js  README.md  _config.yml  about.md  bower.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  work.md
.github/: dependabot.yml
_drafts/: 2013-10-03-remote-pair-programming.md
_includes/: footer.html  head.html
_layouts/: index.html  post.html
_posts/: 2013-09-10-latextutorials.md  2013-09-10-picking-up-the-crumbs.md  2013-09-10-tedxwarwick.md  2013-09-10-virtualfutures.md  2013-09-12-64-bit-programming.md  2013-10-04-solarized-code-highlighting.md  2013-10-10-image-gallery-for-scribble-theme.md  2013-10-11-useful-web-services.md  2013-10-22-tables-in-latex.md  2013-10-27-intel-xeon-phi-coprocessor.md  2013-11-07-installing-eclib-on-osx.md  2013-11-08-parallel-poisson-solver.md  2013-11-19-notes-on.md  2013-11-20-notes-on-c.md  2013-11-20-notes-on-cpp.md  2013-11-20-notes-on-javascript.md  2013-11-20-notes-on-python.md  2013-12-05-notes-on-stl.md  2013-12-10-latex-syntax-highlighting.md
about/: cv.md  index.md
app/: cwmask.html  index.html
blog/: index.html
collections/: index.md
css/: home.1964.css  home.7391.css  home.d8ca.css  main.691b.css  main.7c7d.css  main.e0ae.css
javascripts/: challenge.js  gallery.js
js/: home.2153.js  home.61af.js  home.932e.js  scripts.2e6c.js
logbook/: locations.csv  timeline_statistics.json
scripts/: build.py  build_logbook.py  build_places_geojson.py  build_uk_counties_geojson.py  fetch_country_geojson.py  (+5 more)
(+198 files in other folders)
