[project]
name = "gobbledygook88-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "geojson>=3.2.0",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "markupsafe>=3.0.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.10.0",
    "urllib3>=2.3.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
